--- a/hokaidovietnam_fontend_client/package.json
+++ b/hokaidovietnam_fontend_client/package.json
@@ -19,7 +19,6 @@
     "formik": "^2.4.5",
     "history": "^5.3.0",
     "lucide-react": "^0.368.0",
-    "node-sass": "^9.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^5.0.1",
@@ -27,6 +26,7 @@
     "react-router-dom": "^6.22.3",
     "react-scripts": "5.0.1",
     "react-toastify": "^10.0.5",
+    "sass": "^1.75.0",
     "tailwind-merge": "^2.2.2",
     "tailwindcss-animate": "^1.0.7",
     "typescript": "^4.9.5",
