--- a/hokaidovietnam_fontend_client/package.json
+++ b/hokaidovietnam_fontend_client/package.json
@@ -25,6 +25,7 @@
     "react-redux": "^9.1.0",
     "react-router-dom": "^6.22.3",
     "react-scripts": "5.0.1",
+    "react-spinners": "^0.13.8",
     "react-toastify": "^10.0.5",
     "sass": "^1.75.0",
     "tailwind-merge": "^2.2.2",
