--- a/hokaidovietnam_fontend_client/package.json
+++ b/hokaidovietnam_fontend_client/package.json
@@ -7,6 +7,7 @@
     "@radix-ui/react-dialog": "^1.0.5",
     "@radix-ui/react-select": "^2.0.0",
     "@radix-ui/react-slot": "^1.0.2",
+    "@radix-ui/react-tabs": "^1.0.4",
     "@reduxjs/toolkit": "^2.2.3",
     "@tanstack/react-query": "^5.29.2",
     "@tanstack/react-table": "^8.16.0",
