--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "tailwind-merge": "^2.2.2",
     "tailwindcss-animate": "^1.0.7",
     "typescript": "^4.9.5",
+    "vaul": "^0.9.1",
     "web-vitals": "^2.1.4",
     "yup": "^1.4.0"
   },
