feat: add create product

--- a/.env
+++ b/.env
@@ -1,2 +1,4 @@
 NODE_PATH=src
 REACT_APP_API_URL=http://hokkaido.ductandev.io.vn/api/
+REACT_APP_PUBLIC_CLOUD_NAME=dodirc71p
+REACT_APP_PUBLIC_UPLOAD_PRESET=hokkaido_image_upload
