--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "axios": "^1.6.8",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
+    "dayjs": "^1.11.11",
     "embla-carousel": "^8.0.2",
     "embla-carousel-react": "^8.0.2",
     "formik": "^2.4.5",
@@ -52,6 +53,7 @@
     "typescript": "^4.9.5",
     "vaul": "^0.9.1",
     "web-vitals": "^2.1.4",
+    "xlsx": "https://cdn.sheetjs.com/xlsx-0.20.2/xlsx-0.20.2.tgz",
     "yup": "^1.4.0"
   },
   "scripts": {
